--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@splidejs/react-splide": "^0.7.12",
     "@splidejs/splide-extension-auto-scroll": "^0.5.3",
     "@tailwindcss/vite": "^4.1.4",
+    "axios": "^1.9.0",
     "currency-symbol-map": "^5.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
